--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,29 @@
+version: "3.9"
+
 services:
   splunk:
     image: splunk/splunk:latest
     container_name: splunk
     environment:
-      - SPLUNK_GENERAL_TERMS=--accept-sgt-current-at-splunk-com
-      - SPLUNK_START_ARGS=--accept-license
-      - SPLUNK_PASSWORD=thinh12345
-      - DEBUG=true 
+      SPLUNK_GENERAL_TERMS: --accept-sgt-current-at-splunk-com
+      SPLUNK_START_ARGS: --accept-license
+      SPLUNK_PASSWORD: thinh12345
+      DEBUG: "true"
+      SPLUNK_SERVER_URI: http://localhost:8000
     ports:
       - "8000:8000"   # Splunk Web UI
       - "8089:8089"   # Splunk management port
-      - "9997:9997"   # Splunk indexer receiving port (optional, for forwarders)
+      - "9997:9997"   # Splunk indexer receiving port (optional)
     volumes:
-      # replace with your actual path to the ./data and ./config folders.
       - ~/Workspace/personal/splunkSlides/data:/opt/splunk/var
       - ~/Workspace/personal/splunkSlides/config:/opt/splunk/etc/system/local
-      - /var/log/secure:/mnt/secure.log:ro # sample path, replace with the correct log file for your OS
+      - /var/log/secure:/mnt/secure.log:ro
+    depends_on:
+      - mailhog
+
+  mailhog:
+    image: mailhog/mailhog:latest
+    container_name: mailhog
+    ports:
+      - "1025:1025"   # SMTP port
+      - "8025:8025"   # Web UI
